--- a/CaelumEstoque/CaelumEstoque/Views/Produto/Form.cshtml
+++ b/CaelumEstoque/CaelumEstoque/Views/Produto/Form.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <form action="/Produto/Adiciona" method="post" style="width:700px; position:relative;">
+        <form action="/Produto/Adiciona" method="post">
 
             <div class="form-group">
                 <label for="nome">Nome:</label>
